2005-07-27  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Configure compression and decompression filters.

	* aclocal.m4 (MAN_COMPRESS_WITH): New macro.
	(MAN_SET_DEFAULT_DECOMPRESSION_FILTER): New macro.

	* configure.ac (COMPRESS): Define using MAN_COMPRESS_WITH; this sets
	the @compress@ and @compress_ext@ substitutions.
	(MAN_SET_DEFAULT_DECOMPRESSION_FILTER): Use it to define DO_COMPRESS
	symbol and @decompress@ substitution.
	(GUNZIP, BZIP2, PCAT, ZCAT, FCAT, UNYABBA): Define using
	MAN_FILTER_PREFERRED.
	(MAN_GREP_SILENT): Relocate; add comment.

	* configure, config.h.in: Regenerated.

2005-07-26  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Avoid using `col' in conjunction with `groff'.

	* aclocal.m4 (MAN_DISABLE_COL_WITH_GROFF): New macro...
	* configure.ac: Use it.

	* configure: Regenerated.

	* src/man.conf.in (@nocol@): Redundant substitution; removed.

2005-07-26  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Handle nroff SGR output quirks for groff >= 1.18.

	* aclocal.m4 (MAN_NROFF_SGR_CHECK): New macro; used by...
	(MAN_DISABLE_NROFF_SGR): New macro.
	(MAN_FILTER_PREFERRED): Modified `help' string.
	(MAN_AC_PATH_COMMAND_RESOLVE): Use braces in ${#}, ${@}.

	* configure.ac (MAN_DISABLE_NROFF_SGR): Use it.

	* configure: Regenerated.

	* src/man.conf.in: Update note about groff colour support.

2005-07-08  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Implement autoconf checks for filter programs.

	* aclocal.m4 (MAN_AC_PATH_PROG_CHECKING, MAN_AC_PATH_RESOLVE)...
	(MAN_AC_PATH_COMMAND_RESOLVE, MAN_AC_PATH_PROG_RESULT): New macros;
	use them to implement...
	(MAN_AC_PATH_COMMAND, MAN_AC_PATH_COMMAND_OVERRIDE_CACHE): New macros;
	they provide a modified reimplementation of autoconf's AC_PATH_PROG,
	but preserving arguments which follow the resolved path, and offering
	the capability to override any previously cached result.  Use them to
	implement...