@@ -11,27 +11,27 @@ static struct paths {
     char *name;
     char *path;		/* path plus command options - never NULL */
 } paths[] = {
-    { "MANBIN",         ""               }, /* value unused */
-    { "APROPOS",        "@apropos@"      },
-    { "WHATIS",         "@whatis@"       },
-    { "TROFF",          "@troff@"        },
-    { "NROFF",          "@nroff@"        },
-    { "JNROFF",         "@jnroff@"       },
-    { "EQN",            "@eqn@"          },
-    { "NEQN",           "@neqn@"         },
-    { "JNEQN",          "@jneqn@"        },
-    { "TBL",            "@tbl@"          },
-    { "COL",            "@pcol@"         },
-    { "REFER",          "@refer@"        },
-    { "PIC",            "@pic@"          },
-    { "VGRIND",         "@vgrind@"       },
-    { "GRAP",           "@grap@"         },
-    { "PAGER",          "@pager@"        },
-    { "CMP",            "@cmp@"          },
-    { "CAT",            "@cat@"          },
-    { "COMPRESS",       "@compress@"     },
-    { "COMPRESS_EXT",   "@compress_ext@" }, /* not a path, just a string variable */
-    { "DECOMPRESS",     "@decompress@"   },
-    { "MANSECT",        "@sections@"     }, /* idem */
-    { "MANDEFOPTIONS",  ""               }  /* idem */
+    { "MANBIN",         ""                  }, /* value unused */
+    { "APROPOS",        "${bindir}/apropos" },
+    { "WHATIS",         "${bindir}/whatis"  },
+    { "TROFF",          "@troff@"           },
+    { "NROFF",          "@nroff@"           },
+    { "JNROFF",         "@jnroff@"          },
+    { "EQN",            "@eqn@"             },
+    { "NEQN",           "@neqn@"            },
+    { "JNEQN",          "@jneqn@"           },
+    { "TBL",            "@tbl@"             },
+    { "COL",            "@pcol@"            },
+    { "REFER",          "@refer@"           },
+    { "PIC",            "@pic@"             },
+    { "VGRIND",         "@vgrind@"          },
+    { "GRAP",           "@grap@"            },
+    { "PAGER",          "@pager@"           },
+    { "CMP",            "@cmp@"             },
+    { "CAT",            "@cat@"             },
+    { "COMPRESS",       "@compress@"        },
+    { "COMPRESS_EXT",   "@compress_ext@"    }, /* not a path, just a string variable */
+    { "DECOMPRESS",     "@decompress@"      },
+    { "MANSECT",        "@sections@"        }, /* idem */
+    { "MANDEFOPTIONS",  ""                  }  /* idem */
 };
